<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_spesification"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/spesifikasi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/txt_nameNendroid"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:text="@string/nendroid_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_spesification"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/txt_nameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nameValue"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txt_spesification"
        app:layout_editor_absoluteX="106dp"
        app:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/txt_specOutfit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/outfit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nameValue"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="115dp" />

    <TextView
        android:id="@+id/txt_outfitValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outfitValue"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txt_nameValue"
        app:layout_editor_absoluteX="106dp"
        app:layout_editor_absoluteY="115dp" />

    <TextView
        android:id="@+id/txt_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_outfitValue"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="165dp" />

    <TextView
        android:id="@+id/txt_categoryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/categValue"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txt_outfitValue"
        app:layout_editor_absoluteX="106dp"
        app:layout_editor_absoluteY="165dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="106dp" />

</androidx.constraintlayout.widget.ConstraintLayout>